--- a/ML-TransFraude.ipynb
+++ b/ML-TransFraude.ipynb
@@ -5,7 +5,7 @@
    "id": "190b1eb4-7a53-4694-9a82-e41ec5677986",
    "metadata": {},
    "source": [
-    "# Machine Learning usando o Jupyter Notebook\n",
+    "# Machine Learning para descobrir transações fraudulentas\n",
     "    Uma análise de dados exploratória e Machine Learning feito a partir de dados sintéticos de transações contendo fraudes para prever futuras transações fraudulentas."
    ]
   },
